# ChessX3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: application.h
resources/: Info.plist
src/: application.cpp  main.cpp
